--- a/Example/Podfile
+++ b/Example/Podfile
@@ -12,3 +12,18 @@ target 'RxAlertController_Example' do
     pod 'Nimble'
   end
 end
+
+deployment_target = '10.0'
+
+post_install do |installer|
+    installer.generated_projects.each do |project|
+        project.targets.each do |target|
+            target.build_configurations.each do |config|
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
+            end
+        end
+        project.build_configurations.each do |config|
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
+        end
+    end
+end
